# todoterm

./: README.md  pyproject.toml
todoterm/config/: conn_utils.py  db.db  dbconf.toml
todoterm/controller/: todoController.py
todoterm/model/: tables.py  tododb.db
