[tool.poetry]
name = "todoterm"
version = "0.1.0"
description = ""
authors = ["jonathan <jonathan.willian321@gmail.com>"]
readme = "README.md"

packages = [ 
    { include = "config", from = "todoterm" },
    { include = "todoterm" }  
]

[tool.poetry.dependencies]
python = "^3.10"
config = "^0.5.1"
sqlalchemy = "^2.0.18"
tomlkit = "^0.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
